# evidencebus

./: .gitattributes  AGENTS.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  design.md  justfile  requirements.md  tasks.md
.github/workflows/: ci.yml
crates/evidencebus-canonicalization/: Cargo.toml  README.md
crates/evidencebus-canonicalization/src/: lib.rs
crates/evidencebus-cli/: Cargo.toml  README.md
crates/evidencebus-cli/src/: main.rs
crates/evidencebus-cli/tests/: bdd_tests.rs  cli_tests.rs
crates/evidencebus-codes/: Cargo.toml
crates/evidencebus-codes/src/: lib.rs
crates/evidencebus-core/: Cargo.toml  README.md
crates/evidencebus-core/src/: lib.rs
crates/evidencebus-core/tests/: bdd_tests.rs
crates/evidencebus-digest/: Cargo.toml  README.md
crates/evidencebus-digest/src/: lib.rs
crates/evidencebus-digest/tests/: bdd_tests.rs
crates/evidencebus-export/: Cargo.toml  README.md
crates/evidencebus-export-markdown/: Cargo.toml  README.md
crates/evidencebus-export-markdown/src/: lib.rs
crates/evidencebus-export-markdown/tests/: bdd_tests.rs
crates/evidencebus-export-sarif/: Cargo.toml  README.md
crates/evidencebus-export-sarif/src/: lib.rs
crates/evidencebus-export-sarif/tests/: bdd_tests.rs
crates/evidencebus-export/src/: lib.rs
crates/evidencebus-export/tests/: bdd_tests.rs
crates/evidencebus-fixtures/: Cargo.toml
crates/evidencebus-fixtures/src/: lib.rs
crates/evidencebus-fs/: Cargo.toml  README.md
crates/evidencebus-fs/src/: lib.rs
crates/evidencebus-fs/tests/: bdd_tests.rs
crates/evidencebus-path/: Cargo.toml  README.md
crates/evidencebus-path/src/: lib.rs
crates/evidencebus-path/tests/: edge_cases_bdd.rs  path_sanitization_bdd.rs  path_traversal_bdd.rs  path_validation_bdd.rs  relative_path_validation_bdd.rs
crates/evidencebus-types/: Cargo.toml
crates/evidencebus-types/src/: lib.rs
crates/evidencebus-validation/: Cargo.toml  README.md
crates/evidencebus-validation/src/: lib.rs
crates/evidencebus-validation/tests/: bundle_validation.rs  packet_validation.rs
docs/: api-reference.md  architecture.md  consumer-guide.md  faq.md  getting-started.md  migration-guide.md  mission-and-vision.md  non-goals.md  producer-guide.md  schema.md  testing-strategy.md
docs/adrs/: 0001-evidencebus-vs-cockpitctl-boundary.md  0002-envelope-projections-typed-attachments.md  0003-directory-bundle-layout.md  0004-lossy-export-policy.md  0005-determinism-and-digest-rules.md
docs/tutorials/: building-a-bundle.md  creating-your-first-packet.md  exporting-formats.md  validating-packets-bundles.md
examples/demo-bundle/: bundle.eb.json
examples/demo-bundle-test/: bundle.eb.json
examples/demo-bundle-test/packets/pkt-faultline/: packet.eb.json
examples/demo-bundle-test/packets/pkt-perfgate/: packet.eb.json
examples/demo-bundle/packets/pkt-faultline/: packet.eb.json
examples/demo-bundle/packets/pkt-perfgate/: packet.eb.json
examples/demo-bundle/packets/pkt-perfgate/artifacts/: report.json
fixtures/packets/faultline/: pkt-faultline.eb.json
fixtures/packets/faultline/faultline/: analysis.json  index.html
fixtures/packets/malformed/: absolute-path.json  invalid-digest.json  invalid-status.json  missing-required.json  path-traversal.json
fixtures/packets/perfgate/: pkt-perfgate.eb.json
schemas/: bundle.schema.json  packet.schema.json
