[workspace]
members = [
  "crates/evidencebus-codes",
  "crates/evidencebus-types",
  "crates/evidencebus-core",
  "crates/evidencebus-fs",
  "crates/evidencebus-export",
  "crates/evidencebus-fixtures",
  "crates/evidencebus-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/EffortlessMetrics/evidencebus"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "1.0"
walkdir = "2.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
todo = "deny"
