[package]
name = "evidencebus-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "evidencebus"
path = "src/main.rs"

[dependencies]
clap.workspace = true
evidencebus-codes = { path = "../evidencebus-codes" }
evidencebus-export = { path = "../evidencebus-export" }
evidencebus-fs = { path = "../evidencebus-fs" }
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
