[package]
name = "evidencebus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
evidencebus-codes = { path = "../evidencebus-codes" }
evidencebus-digest = { path = "../evidencebus-digest" }
evidencebus-types = { path = "../evidencebus-types" }
evidencebus-canonicalization = { path = "../evidencebus-canonicalization" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
