[package]
name = "evidencebus-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
evidencebus-canonicalization = { path = "../evidencebus-canonicalization" }
evidencebus-codes = { path = "../evidencebus-codes" }
evidencebus-core = { path = "../evidencebus-core" }
evidencebus-digest = { path = "../evidencebus-digest" }
evidencebus-path = { path = "../evidencebus-path" }
evidencebus-types = { path = "../evidencebus-types" }
evidencebus-validation = { path = "../evidencebus-validation" }
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
evidencebus-fixtures = { path = "../evidencebus-fixtures" }
tempfile.workspace = true

[lints]
workspace = true
